sidebar: removed clear all tabs button and fixed separator alignment

--- a/tab-bar.css
+++ b/tab-bar.css
@@ -11,12 +11,19 @@ zen-workspace {
 }
 
 .pinned-tabs-container-separator {
-    margin: 6px auto !important;
-    height: 2px !important;
-    max-height: 2px !important;
-    width: 10% !important;
-    min-width: 10px !important;
-    border-radius: 2px !important;
+    padding-top: 20px;
+
+    & > toolbarseparator {
+        height: 2px !important;
+        max-height: 2px !important;
+        width: 10% !important;
+        min-width: 10px !important;
+        border-radius: 2px !important;
+    }
+
+    .zen-workspace-close-unpinned-tabs-button {
+        display: none;
+    }
 }
 
 #tabbrowser-tabs[orient='vertical'] {
